fdo#80986: disable highlight DOCX import

Highlight support is not implemented fully, so
it seems better to disable DOCX import of it until
it is finished.
Highlight can't be modified on the UI and is not
saved to ODT/DOC (regression).

Regression from:
8b949134441056a1455d67ddfdd7e0bc5f2ee682

(cherry picked from commit b5e60724ac73bb0e62b249145a8931fd6166bb69)

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: I94891769766ae90017e8afa70e65d080d5270202
Reviewed-on: https://gerrit.libreoffice.org/10721
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>